# transducers

./: .gitignore  Cargo.toml  orbits.py  orbits2.py
src/: combi.rs  cycles.rs  dfa.rs  main.rs  transducer.rs  transducers.rs
