[package]
name = "transducers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
itertools = "0.10.5"
num = "0.4.0"
graphviz-rust = "0.3.0"
rayon = "1.5"
rustc-hash = "1.1.0"
